--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ionic-hello-world",
+  "name": "ionic2-go",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
@@ -13,25 +13,39 @@
     "run:before": "build"
   },
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/compiler-cli": "0.6.2",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/platform-server": "2.0.0",
-    "@ionic/storage": "1.0.3",
-    "ionic-angular": "2.0.0-rc.1",
-    "ionic-native": "2.2.3",
+    "@angular/animations": "5.2.11",
+    "@angular/common": "5.2.11",
+    "@angular/compiler": "5.2.11",
+    "@angular/compiler-cli": "5.2.11",
+    "@angular/core": "^5.2.11",
+    "@angular/forms": "5.2.11",
+    "@angular/http": "5.2.11",
+    "@angular/platform-browser": "5.2.11",
+    "@angular/platform-browser-dynamic": "5.2.11",
+    "@angular/platform-server": "5.2.11",
+    "@ionic-native/camera-preview": "^4.11.0",
+    "@ionic-native/core": "^4.11.0",
+    "@ionic-native/splash-screen": "^4.0.0",
+    "@ionic-native/status-bar": "^4.0.0",
+    "@ionic/storage": "2.1.3",
+    "cordova-android": "7.1.0",
+    "cordova-plugin-camera-preview": "^0.10.0",
+    "cordova-plugin-console": "~1.0.4",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-statusbar": "^2.2.3",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "ionic": "^3.20.0",
+    "ionic-angular": "^3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "0.6.21"
+    "rxjs": "^5.5.0",
+    "zone.js": "0.8.4"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^0.0.36",
-    "typescript": "^2.0.3"
+    "@ionic/app-scripts": "^3.1.10",
+    "ionic": "^4.0.2",
+    "typescript": "^2.6.1"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
@@ -49,5 +63,19 @@
       "locator": "ios"
     }
   ],
-  "description": "ionic2-go: An Ionic project"
+  "description": "ionic2-go: An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-device": {},
+      "cordova-plugin-console": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-camera-preview": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
