--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ $RECYCLE.BIN/
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
+*.map
+resources/ios/
+resources/android/
+resources/README.md
